--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.persistentbit</groupId>
     <artifactId>javacodegen</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.2.1-SNAPSHOT</version>
 
     <packaging>maven-plugin</packaging>
     <name>JAVACODEGEN</name>
@@ -123,7 +123,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.5.1</version>
 
                 <configuration>
                     <source>1.8</source>
@@ -139,7 +139,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>3.0.0-M1</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
